--- a/mystyle3.css
+++ b/mystyle3.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+.content{
+  max-width:500px;
+  margin: auto;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -96,5 +100,6 @@ img{
   width: 100%;
   padding: 20px;
 }
+
 
 
