--- a/mystyle.css
+++ b/mystyle.css
@@ -45,7 +45,7 @@ background-color: #aaa;
 
 
 .main {
-  flex: 80%;
+ 
   float: center;
   display: flex;
   height: 650px;
@@ -66,6 +66,7 @@ background-color: #aaa;
   background-color: #aaa;
   margin: 10px;
   padding: 10px;
+  height: 200px;
 }
 
 
@@ -82,3 +83,4 @@ background-color: #aaa;
 
 
 }
+
